<resources>
    <string name="app_name">prueba1</string>
    <string name="title_activity_menu_principal">menuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medic OS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_home">Historial Medico</string>
    <string name="menu_gallery">Historial de Citas</string>
    <string name="menu_slideshow">Agendar Cita</string>
    <string name="menu_tools">Citas Pendientes</string>
    <string name="menu_cerrarsesion">Cerrar Sesion</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings perfil paciente-->
    <string name="nombres">Nombre(s)</string>
    <string name="primerap">Primer Apellido</string>
    <string name="segundoap">Segundo Apellido</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_nac">Fecha de Nacimiento</string>
    <string name="curp">Curp</string>
    <string name="prompt_email">Email</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>

    <!-- VARIABLES DE FACEBOOK -->
    <string name="facebook_app_id">419213542185155</string>
    <string name="title_activity_maps">Map</string>


    <string name="map">Médicos que se encuentran cerca</string>
    <string name="backbtn">Regresar al Menú</string>
</resources>
