<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/optRoundCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scroll">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="50dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingBottom="20dp">


                <!--  Nombre Label -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nombret"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/nombres"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--  Primer Apellido Label -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/primerAp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/primerap"
                        android:selectAllOnFocus="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!--  Segundo AP Label -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/segundoAp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/segundoap"
                        android:layout_marginBottom="10dp"
                        android:selectAllOnFocus="true"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--  Fecha Nac -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/fecha_nac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:hint="@string/fecha_nac"
                        android:layout_marginBottom="10dp"
                        android:focusable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
                />

                <!--  email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:layout_marginBottom="10dp"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--  direccion -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/direccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/direccion"
                        android:layout_marginBottom="10dp"
                        android:selectAllOnFocus="true"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--  telefono -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono"
                        android:ems="10"
                        android:layout_marginBottom="10dp"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--  specialidad -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/curp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/curp"
                        android:inputType="text"
                        android:layout_marginBottom="10dp"
                        android:selectAllOnFocus="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/guardar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/button_acept"
                    android:text="Guardar"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:elevation="0dp"
        android:src="@drawable/mujer"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/optRoundCardView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/optRoundCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>